@@ -33,7 +33,7 @@ use Cwd;
 our %build_reqs = (
 	'perl-ExtUtils-Depends'   => '0.300',
 	'perl-ExtUtils-PkgConfig' => '1.030',
-	'perl-Glib'               => '1.200', # FIXME: 1.212 for precompiled headers
+	'perl-Glib'               => '1.212', # FIXME: 1.220
 	'perl-Pango'              => '1.210',
 	'perl-Cairo'              => '1.000',
 	'Gtk+'                    => '2.0.0',
@@ -286,7 +286,7 @@ WriteMakefile(
     $gtk2->get_makefile_vars,
 );
 
-=unstable
+#=unstable
 
 print <<__EOW__;
 WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
@@ -294,12 +294,12 @@ WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
    This is an unstable development release of Gtk2.  The API is not
    frozen and things are subject to change at any time.  Report any
    bugs to gtk-perl-list AT gnome DOT org as soon as possible.
-   Please use the 1.18x series for important work.
+   Please use the 1.20x series for important work.
 
 WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
 __EOW__
 
-=cut
+#=cut
 
 =frozen
 
